--- a/app/src/main/res/layout/article_list_item.xml
+++ b/app/src/main/res/layout/article_list_item.xml
@@ -2,11 +2,12 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="10dp">
     <ImageView
             android:layout_width="32dp"
-               android:layout_height="32dp"
+            android:layout_height="32dp"
             android:id="@+id/result_icon"
             android:layout_margin="16dp"
             android:layout_gravity="center"
