--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -2,13 +2,12 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.connect.systems.ng.wikipedia.fragments.HistoryFragment">
+             tools:context=".fragments.HistoryFragment">
 
    <androidx.recyclerview.widget.RecyclerView
-           android:id="@+id/favourites_article_recycler"
+           android:id="@+id/history_article_recycler"
            android:layout_width="match_parent"
-           android:layout_height="match_parent">
-
-   </androidx.recyclerview.widget.RecyclerView>
+           android:layout_height="match_parent"
+           tools:listitem="@android:layout/activity_list_item"/>
 
 </FrameLayout>
