--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:id="@+id/appbar"
+            android:theme="@style/AppToolBar"
             app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
