--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/fragment_container"
+                    android:layout_marginBottom="?attr/actionBarSize"
                     android:layout_marginTop="?attr/actionBarSize"
                     app:layout_constraintBottom_toTopOf="@+id/nav_view"
                     app:layout_constraintTop_toBottomOf="@id/appbar">
@@ -35,10 +36,11 @@
             android:id="@+id/nav_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="?android:attr/windowBackground"
+            android:background="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+
             app:menu="@menu/bottom_nav_menu"/>
 
 
